--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,14 +3,32 @@
 
 name: Go
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+on: ["push", "pull_request"]
 
 jobs:
-
+  ci:
+    name: "Run CI"
+    strategy:
+      fail-fast: false
+      matrix:
+        os:  ["ubuntu-latest"]
+        go:  ["1.22.x", "1.22.x"]        
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 1
+    - uses: WillAbides/setup-go-faster@v1.14.0
+      with:
+        go-version: ${{ matrix.go }}
+    - run: "go test ./..."
+    - run: "go vet ./..."
+    - uses: dominikh/staticcheck-action@v1
+      with:
+        version: "latest"
+        install-go: false
+        cache-key: ${{ matrix.go }}
+        working-directory: ${{ matrix.dir }}
   build:
     runs-on: ubuntu-latest
     steps:
